Fixed burger text alignment

--- a/src/modules/header/header.scss
+++ b/src/modules/header/header.scss
@@ -107,6 +107,8 @@ $headerCurves: (
       font-family: $fontFamilyBlack;
       color: $colorWhite;
       margin-left: $sizeSmallRegular;
+
+      transform: translateY(3px);
     }
 
     svg {
